// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Analytical Card Render without Crashing 1`] = `
<DocumentFragment>
  <ui5-card
    ui5-card=""
  >
    <div
      aria-role="group"
      class="AnalyticalCard-content"
    >
      <span
        class="Text-text"
      >
        I'm a content!
      </span>
    </div>
  </ui5-card>
</DocumentFragment>
`;

exports[`Analytical Card with AnalyticalCardHeader 1`] = `
<DocumentFragment>
  <ui5-card
    ui5-card=""
  >
    <div
      aria-labelledby="1337-title 1337-mainIndicator"
      aria-roledescription="Card Header"
      class="AnalyticalCardHeader-cardHeader"
      data-sap-ui-fastnavgroup="true"
      id="1337"
      role="heading"
      slot="header"
      tabindex="0"
    >
      <div
        tabindex="-1"
      >
        <div
          class="AnalyticalCardHeader-headerTitles"
        >
          <div
            class="AnalyticalCardHeader-headerFirstLine"
          >
            <span
              aria-level="3"
              class="AnalyticalCardHeader-headerText"
              id="1337-title"
              role="heading"
            >
              Header Title
            </span>
          </div>
        </div>
        <div
          class="AnalyticalCardHeader-kpiContent"
        >
          <div
            aria-label="undefinedundefined
"
            class="AnalyticalCardHeader-mainIndicator"
            id="1337-mainIndicator"
            role="img"
          >
            <span
              class="AnalyticalCardHeader-value"
            />
            <div
              class="AnalyticalCardHeader-indicatorAndUnit"
            >
              <div
                class="AnalyticalCardHeader-unit"
              />
            </div>
          </div>
          <div
            class="AnalyticalCardHeader-indicatorGap"
          />
          <div
            class="AnalyticalCardHeader-sideIndicators"
          />
        </div>
      </div>
    </div>
    <div
      aria-role="group"
      class="AnalyticalCard-content"
    >
      <span
        class="Text-text"
      >
        I'm a content!
      </span>
    </div>
  </ui5-card>
</DocumentFragment>
`;

exports[`Analytical Card with custom header 1`] = `
<DocumentFragment>
  <ui5-card
    ui5-card=""
  >
    <div>
      I'm a header!
    </div>
    <div
      aria-role="group"
      class="AnalyticalCard-content"
    >
      <span
        class="Text-text"
      >
        I'm a content!
      </span>
    </div>
  </ui5-card>
</DocumentFragment>
`;
